# sparse-tools

./: CMakeLists.txt
MKLPardiso/: CMakeLists.txt  MKLSolving.c  MKLSolving.h  error.h  main.c  routine.c  routine.h  sparseMatrixOperation.c  sparseMatrixOperation.h  type.h
metisPerm/: CMakeLists.txt  main.c
mtx2bin/: CMakeLists.txt  main.c
scripts/: convertMTX2BIN.sh  extractMatrices.sh  generateConfigs.py
