CMAKE_MINIMUM_REQUIRED(VERSION 3.3.2)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
    set(INTEL_LINK_MKL_FLAG "-mkl=parallel")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${INTEL_LINK_MKL_FLAG}")
else()
    message(FATAL_ERROR "This code can be compiled with intel compiler only")
endif()
set(SOURCE main.c MKLSolving.c routine.c sparseMatrixOperation.c)
add_executable(pardiso ${SOURCE})
